# synker

./: .gitignore  Cargo.toml  INSTALL.md  README.md  build.bat  build.sh  config.toml  synker-server.service
examples/: client.rs
migrations/: 001_initial.sql
server/: auth.rs  config.rs  database.rs  filesystem.rs  handlers.rs  mycloud.rs  synker_server.rs  types.rs
