[package]
name = "synker-server"
version = "0.1.0"
edition = "2021"
description = "Self-hosted cloud storage server for MyCloud OS5"
license = "MIT"

[[bin]]
name = "synker-server"
path = "server/synker_server.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.21"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "cors", "trace"] }
axum = { version = "0.6", features = ["json", "multipart", "ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
notify = "6.0"
walkdir = "2.3"
mime_guess = "2.0"
futures-util = "0.3"
tokio-tungstenite = "0.20"
bcrypt = "0.14"
jsonwebtoken = "8.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
toml = "0.8"
urlencoding = "2.1"
